:wrench: adjust base url

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "strict": true,
     "target": "ESNext",
     "module": "ESNext",
