--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "postcss-import": "^14.1.0",
     "solid-app-router": "^0.3.3",
     "solid-icons": "^0.4.13",
